--- a/htm/custom_.htm
+++ b/htm/custom_.htm
@@ -1,6 +1,6 @@
 <h1>Customization Guide</h1>
 
-<p>The Pro 4 has unprecedented customization capabilities based on using a conventional laptop computer as the core of the system's topside architecture.  Many new features will be available through software updates.  Future software versions are already on the drawing board to include user customizations to the interface and functionality.  Examples include variations on the cockpit instruments and piloting modes that will automate piloting maneuvers like dive and surface modes that pitch the ROV to take advantage of the powerful horizontal thrusters for vertical movement.</p>
+<p>The Pro 4 <!--1--> Ultra<!--/1--> has unprecedented customization capabilities based on using a conventional laptop computer as the core of the system's topside architecture.  Many new features will be available through software updates.  Future software versions are already on the drawing board to include user customizations to the interface and functionality.  Examples include variations on the cockpit instruments and piloting modes that will automate piloting maneuvers like dive and surface modes that pitch the ROV to take advantage of the powerful horizontal thrusters for vertical movement.</p>
 
 <h2>Software Updates</h2>
 
