--- a/htm/custom_accessories.htm
+++ b/htm/custom_accessories.htm
@@ -1,6 +1,6 @@
 <h1>Custom Accessories</h1>
 
-<p>Custom accessories can be added to VideoRay Pro 4 ROV.  Accessories can take advantage of the following capabilities:</p>
+<p>Custom accessories can be added to VideoRay Pro 4 <!--1--> Ultra<!--/1--> ROV.  Accessories can take advantage of the following capabilities:</p>
 
 <ul>
   <li>Power</li>
