--- a/htm/custom_sdk.htm
+++ b/htm/custom_sdk.htm
@@ -1,10 +1,10 @@
 <h1>SDK (Software Developer's Kit)</h1>
 
-<p>The VideoRay SDK (Software Development Kit) allows for the modification and enhancement of the VideoRay Pro 4.  The SDK is divided into two major categories: the Host SDK and the Embedded SDK. </p>
+<p>The VideoRay SDK (Software Development Kit) allows for the modification and enhancement of the VideoRay Pro 4 <!--1--> Ultra<!--/1-->.  The SDK is divided into two major categories: the Host SDK and the Embedded SDK. </p>
 
 <p>The Host SDK, written in C# and consisting of several .DLL's allows for the creation of applications running on a host computer to control the ROV.  The Host SDK also provides facilities for enhancing and extending VideoRay Cockpit, the standard control software, through the use of a plug-in architecture.  The recommended development environment is Microsoft Visual Studio/C#, however the SDK can be used from any .NET language.</p>
 
-<p>The Embedded SDK, written in GNU C, can be used to develop firmware to run on directly VideoRay hardware.  Currently two hardware platforms are supported, the Pro 4 and the PAM (Protocol Adapter and Multiplexer) module.</p>
+<p>The Embedded SDK, written in GNU C, can be used to develop firmware to run on directly VideoRay hardware.  Currently two hardware platforms are supported, the Pro 4 <!--1--> Ultra<!--/1--> and the PAM (Protocol Adapter and Multiplexer) module.</p>
 
 <p>All higher level protocols (communications, memory maps, bootloader, etc.) are fully and openly documented.</p>
 
