--- a/htm/engine_compass.htm
+++ b/htm/engine_compass.htm
@@ -12,7 +12,7 @@
 
 <h2>Basic Procedures</h2>
 
-<p>The specific procedures will depend upon the compass installed in the Pro 4 ROV.  In general these are the steps that must be performed:</p>
+<p>The specific procedures will depend upon the compass installed in the Pro 4 <!--1--> Ultra<!--/1--> ROV.  In general these are the steps that must be performed:</p>
 
 <ol>
   <li>Make sure the sub is configured with accessories in the way it will be used.</li>
