--- a/htm/equip_controller.htm
+++ b/htm/equip_controller.htm
@@ -2,7 +2,7 @@
 
 <p>The hand controller is used to operate the VideoRay and its features.
 
-<p>The Pro 4 Industrial Hand Controller joystick<!--v-->, button and knob mapping<!--/v--> is shown below:</p>
+<p>The Pro 4 <!--1--> Ultra<!--/1--> Industrial Hand Controller joystick<!--v-->, button and knob mapping<!--/v--> is shown below:</p>
 
 <table class="transparent">
   <tr>
@@ -68,7 +68,7 @@
 
 <h2>Hand Controller Support</h2>
 
-<p>Any Microsoft<sup>&reg;</sup> Windows<sup>&reg;</sup> compatible game controller can be used with the Pro 4, but each controller requires a configuration file to map the joystick, buttons and knobs to the ROV functions.  VideoRay Cockpit currently includes two hand controller configuration files, the VideoRay industrial hand controller, and the Logitech<sup>&reg;</sup> Cordless RumblePad<sup>TM</sup> 2. These controllers are auto detected on start-up.  Other controller configuration files are available online from VideoRay for these and/or other controllers.  Customer controller configuration files can also be created by users.  See the <a href="../../pro_4/html/custom_controller.html">Hand Controller Customization</a> section of the <a href="../../pro_4/html/custom_.html">Customization Guide</a> for more information.</p>
+<p>Any Microsoft<sup>&reg;</sup> Windows<sup>&reg;</sup> compatible game controller can be used with the Pro 4 <!--1--> Ultra<!--/1-->, but each controller requires a configuration file to map the joystick, buttons and knobs to the ROV functions.  VideoRay Cockpit currently includes two hand controller configuration files, the VideoRay industrial hand controller, and the Logitech<sup>&reg;</sup> Cordless RumblePad<sup>TM</sup> 2. These controllers are auto detected on start-up.  Other controller configuration files are available online from VideoRay for these and/or other controllers.  Customer controller configuration files can also be created by users.  See the <a href="../../pro_4/html/custom_controller.html">Hand Controller Customization</a> section of the <a href="../../pro_4/html/custom_.html">Customization Guide</a> for more information.</p>
 
 <h2>Logitech Cordless Rumble Pad 2</h2>
 
