--- a/htm/instrument_acc_manip.htm
+++ b/htm/instrument_acc_manip.htm
@@ -19,4 +19,4 @@
 
 <p><img src="../../required/images/icon_note.gif"> The feedback is based upon the status of the hand controller input, not the manipulator or cutter action.</p>
 
-<p><img src="../../required/images/icon_note.gif"> The VideoRay Manipulator and Cutter are optional and may not be included in all VideoRay Pro 4 configurations.</a>
+<p><img src="../../required/images/icon_note.gif"> The VideoRay Manipulator and Cutter are optional and may not be included in all VideoRay Pro 4 <!--1--> Ultra<!--/1--> configurations.</a>
