--- a/htm/instrument_acc_pam.htm
+++ b/htm/instrument_acc_pam.htm
@@ -19,6 +19,6 @@
 
 <p><img src="../../pro_4/images/instrument_pam_power.png"></p>
 
-<p><img src="../../required/images/icon_note.gif"> The VideoRay PAM Device is optional and may not be included in all VideoRay Pro 4 configurations.</p>
+<p><img src="../../required/images/icon_note.gif"> The VideoRay PAM Device is optional and may not be included in all VideoRay Pro 4 <!--1--> Ultra<!--/1--> configurations.</p>
 
 <!--1--></div><!--/1-->
