--- a/htm/instrument_acc_rov_gps.htm
+++ b/htm/instrument_acc_rov_gps.htm
@@ -48,4 +48,4 @@
 
 <p><b>Toggle Filter</b> - Toggle filter allows the filter to be turned on or off.  If the filter is On, only those signals that meet all filter criteria are passed.  If the filter is Off, GPS information is always passed.</p>
 
-<p><img src="../../required/images/icon_note.gif"> The VideoRay ROV GPS is optional and may not be included in all VideoRay Pro 4 configurations.</a>
+<p><img src="../../required/images/icon_note.gif"> The VideoRay ROV GPS is optional and may not be included in all VideoRay Pro 4 <!--1--> Ultra<!--/1--> configurations.</a>
