--- a/htm/instrument_temp.htm
+++ b/htm/instrument_temp.htm
@@ -20,6 +20,6 @@
 
 <p>The size and display of the Temperature Indicator can be adjusted.  See the <a href="../../pro_4/html/cockpit_instruments.html">Instruments</a> section of this guide for more information.</p>
 
-<p><img src="../../required/images/icon_note.gif"> The Pro 4 has several temperature sensors including an internal temperature sensor to monitor the health of the ROV.  The internal temperature sensor is monitored in the ROV Health Instrument.  See the <a href="../../pro_4/html/instrument_health.html">ROV Health</a> section of the <a href="../../pro_4/html/cockpit_.html">VideoRay Cockpit Guide</a>.</p>
+<p><img src="../../required/images/icon_note.gif"> The Pro 4 <!--1--> Ultra<!--/1--> has several temperature sensors including an internal temperature sensor to monitor the health of the ROV.  The internal temperature sensor is monitored in the ROV Health Instrument.  See the <a href="../../pro_4/html/instrument_health.html">ROV Health</a> section of the <a href="../../pro_4/html/cockpit_.html">VideoRay Cockpit Guide</a>.</p>
 
 <!--1--></div><!--/1-->
