--- a/htm/menu_cam.htm
+++ b/htm/menu_cam.htm
@@ -16,7 +16,7 @@
       Camera Title
       </td>
     <td>
-      Set the Camera Title.  The Camera Title can contain up to 10 characters, which can be displayed over the image.  Use the arrow buttons or keys to highlight the desired character, and then click on the menu button two times to select that character.  See the <a href="../../pro_4/html/menu_display.html">DISPLAY</a> sub-menu for information on how to display the Camera Title once it has been set.  The VideoRay Cockpit software provides advanced video overlay text features.  The Camera Title function is therefore not recommended for use with the VideoRay Pro 4.<p></p>
+      Set the Camera Title.  The Camera Title can contain up to 10 characters, which can be displayed over the image.  Use the arrow buttons or keys to highlight the desired character, and then click on the menu button two times to select that character.  See the <a href="../../pro_4/html/menu_display.html">DISPLAY</a> sub-menu for information on how to display the Camera Title once it has been set.  The VideoRay Cockpit software provides advanced video overlay text features.  The Camera Title function is therefore not recommended for use with the VideoRay Pro 4 <!--1--> Ultra<!--/1-->.<p></p>
       </td>
     </tr>
   <tr valign="top" bgcolor="#fff2bf">
