--- a/htm/menu_exposure.htm
+++ b/htm/menu_exposure.htm
@@ -15,7 +15,7 @@
       <b>SHUTTER</b>
       </td>
     <td>
-      Set the Shutter speed.  This setting is not used when the Lens Type is set to ELC, and therefore does not apply to the VideoRay Pro 4.
+      Set the Shutter speed.  This setting is not used when the Lens Type is set to ELC, and therefore does not apply to the VideoRay Pro 4 <!--1--> Ultra<!--/1-->.
 
       <ul>
         <li>1/60 (1/50 for PAL format cameras)</li>
