--- a/htm/menu_lens.htm
+++ b/htm/menu_lens.htm
@@ -17,9 +17,9 @@
     <td>
       Set the Lens Type.  The Lens Type defines the type of iris.
       <ul>
-        <li><b><u>ELC</u></b> - This is the correct Lens Type setting for the VideoRay Pro 4.</li>
-        <li>DC - This Lens Type is not recommended for the VideoRay Pro 4.</li>
-        <li>VIDEO - This Lens Type is not recommended for the VideoRay Pro 4.</li>
+        <li><b><u>ELC</u></b> - This is the correct Lens Type setting for the VideoRay Pro 4 <!--1--> Ultra<!--/1-->.</li>
+        <li>DC - This Lens Type is not recommended for the VideoRay Pro 4 <!--1--> Ultra<!--/1-->.</li>
+        <li>VIDEO - This Lens Type is not recommended for the VideoRay Pro 4 <!--1--> Ultra<!--/1-->.</li>
         </ul>
       </td>
     </tr>
