--- a/htm/misc/amnt_monitor.htm
+++ b/htm/misc/amnt_monitor.htm
@@ -6,7 +6,7 @@
 
 <p>The monitor supports several input sources, but the only input connections accessible are the VGA In, and on some systems the Analog Video In.  The input source selection is controlled by the monitor menu.  The monitor menu also controls the picture quality including brightness and contrast and other picture settings.</p>
 
-<p>For better outdoor viewing in daylight, the Pro 4 includes a sun shade that mounts on the control panel case.</p>
+<p>For better outdoor viewing in daylight, the Pro 4 <!--1--> Ultra<!--/1--> includes a sun shade that mounts on the control panel case.</p>
 
 <p>The monitor includes the following switches:</p>
 
