--- a/htm/misc/dn_operator_toc.htm
+++ b/htm/misc/dn_operator_toc.htm
@@ -164,5 +164,5 @@ l">In-water Positioning Tactics</a></li>
   </ul>
 <h3><a href="dn_ref.html">Reference Documents</a></h3>
 <ul>
-  <li><b><a href="index.html">Pro 4 Operator's Manual</a></b></li>
+  <li><b><a href="index.html">Pro 4 <!--1--> Ultra<!--/1--> Operator's Manual</a></b></li>
   </ul>
