--- a/htm/misc/lyyn_hawk.htm
+++ b/htm/misc/lyyn_hawk.htm
@@ -1,12 +1,12 @@
 <h2>Lyyn Hawk</h2>
 
-<p>The LYYN visibility enhancement systems provide real time image clarification allowing you to see more details and further in water with limited visibility.  They can be used to process the video directly from the Pro 4, or with any external composite video source.</p>
+<p>The LYYN visibility enhancement systems provide real time image clarification allowing you to see more details and further in water with limited visibility.  They can be used to process the video directly from the Pro 4 <!--1--> Ultra<!--/1-->, or with any external composite video source.</p>
 
 <h3>LYYN Hawk<sup>TM</sup></h3>
 
 <p>The LYYN Hawk board can be built into the control panel to eliminate the need to carry additional components or connect cables.</p>
 
-<p>Early models of the Pro 4 control panel included a membrane keypad to control the LYYN functions.  VideoRay Cockpit software can now be used to control the LYYN functions.  See the LYYN documentation for information about using the keypad and the <a href="instrument_acc_lyyn.html"></a> section in the <a href="cockpit_.html">VideoRay Cockpit Guide</a> for more information about the software controls.</p>
+<p>Early models of the Pro 4 <!--1--> Ultra<!--/1--> control panel included a membrane keypad to control the LYYN functions.  VideoRay Cockpit software can now be used to control the LYYN functions.  See the LYYN documentation for information about using the keypad and the <a href="instrument_acc_lyyn.html"></a> section in the <a href="cockpit_.html">VideoRay Cockpit Guide</a> for more information about the software controls.</p>
 
 <h3>LYYN T38<sup>TM</sup></h3>
 
