--- a/htm/misc/rov_qc.htm
+++ b/htm/misc/rov_qc.htm
@@ -16,5 +16,5 @@
 
 <h3>Final QC</h3>
 
-<p>This is the factory procedure for checking the Pro 4 as a complete system.  All components are tested together to ensure the entire system functions as designed in the expected operating configuration.</p>
+<p>This is the factory procedure for checking the Pro 4 <!--1--> Ultra<!--/1--> as a complete system.  All components are tested together to ensure the entire system functions as designed in the expected operating configuration.</p>
 
