--- a/htm/upgrade_.htm
+++ b/htm/upgrade_.htm
@@ -1,15 +1,15 @@
-<h1>Upgrader's Guide to the VideoRay Pro 4</h1>
+<h1>Upgrader's Guide to the VideoRay Pro 4 <!--1--> Ultra<!--/1--></h1>
 
-<p>This section contains information about the latest version of the Pro 4 and VideoRay Cockpit software.  It is divided into a section about the latest hardware and software changes in this release, and information for users of VideoRay Pro 3 who are upgrading to the VideoRay Pro 4 for the first time.</p>
+<p>This section contains information about the latest version of the Pro 4 <!--1--> Ultra<!--/1--> and VideoRay Cockpit software.  It is divided into a section about the latest hardware and software changes in this release, and information for users of VideoRay Pro 3 who are upgrading to the VideoRay Pro 4 <!--1--> Ultra<!--/1--> for the first time.</p>
 
 <h2>Topics in this Section</h2>
 <ul>
   <li><a href="../../pro_4/html/upgrade_new.html">What's New in this Release</a></li>
   <li><a href="../../pro_4/html/upgrade_3.html">Pro 3 Upgrader's Guide</a></li>
   <ul>
-    <li><a href="../../pro_4/html/upgrade_3_architecture.html">Pro 4 System Architecture</a></li>
-    <li><a href="../../pro_4/html/upgrade_3_updates.html">Pro 4 Feature Updates</a></li>
-    <li><a href="../../pro_4/html/upgrade_3_compatibility.html">Compatibility Issues between the Pro 3 and Pro 4</a></li>
+    <li><a href="../../pro_4/html/upgrade_3_architecture.html">Pro 4 <!--1--> Ultra<!--/1--> System Architecture</a></li>
+    <li><a href="../../pro_4/html/upgrade_3_updates.html">Pro 4 <!--1--> Ultra<!--/1--> Feature Updates</a></li>
+    <li><a href="../../pro_4/html/upgrade_3_compatibility.html">Compatibility Issues between the Pro 3 and Pro 4 <!--1--> Ultra<!--/1--></a></li>
     </ul>
   </ul>
 
