--- a/htm/cockpit_install.htm
+++ b/htm/cockpit_install.htm
@@ -1,10 +1,10 @@
 <h1>VideoRay Cockpit Software Installation</h1>
 
-<p><img src="../../required/images/icon_note.gif"> VideoRay Cockpit is installed at the factory on new Pro 4 systems.  VideoRay Cockpit does not need to be installed unless the software has been deleted, or the software is being installed on a new computer.</p>
+<p><img src="../../required/images/icon_note.gif"> VideoRay Cockpit is installed at the factory on new Pro 4 <!--1--> Ultra<!--/1--> Systems.  VideoRay Cockpit does not need to be installed unless the software has been deleted, or the software is being installed on a new computer.</p>
 
 <p>VideoRay installation software components are stored on the computer in the <span class="folder">C:\VideoRay\Installs\</span> folder, and the latest versions are available online at: <a href="http://download.videoray.com/" target="_blank">http://download.videoray.com/</a> or through their respective vendors' websites.
 
-<p>The VideoRay Pro 4 control panel requires the installation of a serial communications hardware driver and a video capture hardware driver on the computer.  These hardware drivers can be found on the local machine or online in the above referenced areas.</p>
+<p>The VideoRay Pro 4 <!--1--> Ultra<!--/1--> Control Panel requires the installation of a serial communications hardware driver and a video capture hardware driver on the computer.  These hardware drivers can be found on the local machine or online in the above referenced areas.</p>
 
 <p>In addition, the VideoRay Cockpit application requires the following prerequisite software:  .Net Framework 4, DirectX and SlimDX.  There are two versions of the installation package.  One package includes the full installation has the prerequisites included, and one does not.  If the software is being installed on a computer for the first time, the package with the prerequisites must be used.  If VideoRay Cockpit has been installed previously, the package without the prerequisites can usually be used.  In some cases there may be updates to the prerequisite requirements, and they will need to be updated.</p>
 
