--- a/htm/instrument_acc_lyyn.htm
+++ b/htm/instrument_acc_lyyn.htm
@@ -27,6 +27,6 @@
 
 <p><img src="../../required/images/icon_note.gif"> Software control of the LYYN requires specific hardware interface components within the control panel.  Control panels that include a LYYN keypad are typically not configured with these components and the LYYN instrument will not be presented.  If the LYYN keypad is present, the keypad can be used to control the LYYN features.</p>
 
-<p><img src="../../required/images/icon_note.gif"> The LYYN Visibility Enhancement system is optional and may not be included in all VideoRay Pro 4 configurations.</p>
+<p><img src="../../required/images/icon_note.gif"> The LYYN Visibility Enhancement system is optional and may not be included in all VideoRay Pro 4 <!--1--> Ultra<!--/1--> configurations.</p>
 
 <!--1--></div><!--/1-->
