--- a/htm/misc/equip_buccaneer.htm
+++ b/htm/misc/equip_buccaneer.htm
@@ -4,4 +4,4 @@
 
 <p>For VideoRay users, Buccaneer provides a rugged ROV bumper frame.</p>
 
-<p><img src="../../images/icon_note.gif"> This equipment is optional and may not be included in all VideoRay Pro 4 configurations.</p>
+<p><img src="../../images/icon_note.gif"> This equipment is optional and may not be included in all VideoRay Pro 4 <!--1--> Ultra<!--/1--> configurations.</p>
