--- a/htm/pro_4_ultra_limitations.htm
+++ b/htm/pro_4_ultra_limitations.htm
@@ -1,3 +1,3 @@
 <div id="pro_4_limitations">
-  This feature is supported on the Pro 4, but is not available on the Pro 4 Ultra.
+  This feature is supported on the Pro 4 <!--1--> Ultra<!--/1-->, but is not available on the Pro 4 <!--1--> Ultra<!--/1--> .
   </div>
