--- a/htm/computer_lenovo.htm
+++ b/htm/computer_lenovo.htm
@@ -3,3 +3,5 @@
 <p>The Lenovo Yoga has been set up with a "VideoRay" user account and there is no password assigned.</p>
 
 <p>The mount that holds the computer to the control panel is designed to tilt to provide optimal viewing and to allow easier access to the side ports.  The computer can also be flipped to allow it to be used in tablet mode or laptop mode.</p>
+
+<p><img src="../../required/images/icon_note.png"> Product specifications for the Lenovo Yogo Tablet change from time to time.  For the Lenovo Yoga 2, the USB cable to the panel must be connected to the USB 2.0 port on the left side of the computer when facing the keyboard.</p>
