--- a/htm/equip_tether.htm
+++ b/htm/equip_tether.htm
@@ -203,7 +203,7 @@
     </tr>
   </table>
 
-<p><img src="../../required/images/icon_note.png"> Tether pin numbering in the connector is as follows.  When looking at the mating surface of the connector, Pin 1 is the offset pin.  For male connectors, pins 2-8 proceed in a clockwise direction.  For female connectors, pins 2-8 proceed in a counter-clockwise direction.</p>
+<p><img src="../../required/images/icon_note.png"> All conductors are straight through, such that pin 1 in the male connector is connected to socket 1 in the female connector, and so on for all eight pins / sockets.  Tether pin numbering in the connector is as follows.  When looking at the mating surface of the connector, Pin 1 is the offset pin / socket.  For male connectors, pins 2-8 proceed in a clockwise direction.  For female connectors, sockets 2-8 proceed in a counter-clockwise direction.</p>
 
 <p><img src="../../required/images/icon_caution.png"> Always secure the tether connectors using the locking sleeves and strain relief system to avoid separation and loss of the ROV.</p>
 
