--- a/htm/panel_computer.htm
+++ b/htm/panel_computer.htm
@@ -4,7 +4,9 @@
 
 <p><img src="../../required/images/icon_note.png"> For information about using the computer in general, see the instructions that came with it.</p>
 
-<p>The computer is mounted to the control panel by a clamp.  To remove the computer from the panel, loosen the yellow knob behind the computer until the computer can be pushed back enough to lift the front of the computer from the front clamp.  Reverse the process to install the computer.</p>
+<!--1--><p>The computer is mounted to a tilting plate in the control panel.  This allows the computer to be used in laptop mode or tablet mode.  To switch between modes, release the plate latch and tilt the plate down until it can be removed from the retaining pivots.  Reverse the plate and reinstall it in the pivots.</p><!--/1-->
+
+<!--4--><p>The computer is mounted to the control panel by a clamp.  To remove the computer from the panel, loosen the yellow knob behind the computer until the computer can be pushed back enough to lift the front of the computer from the front clamp.  Reverse the process to install the computer.</p><!--/4-->
 
 <p><img src="../../required/images/icon_note.png"> VideoRay does not recommend installing additional hardware or software on the computer unless you are familiar with its operation and confident it will not interfere with VideoRay Cockpit or the computer's ports.  Software that is packaged with VideoRay accessories has been tested and is approved for use.</p>
 
