Added information about external GFCI and circuit breaker.

--- a/htm/equip_acc.htm
+++ b/htm/equip_acc.htm
@@ -1,6 +1,6 @@
 <h1>Accessories</h1>
 
-<p>Numerous accessories can be used with the <!--5-->MSS<!---/5--><!--0-->Pro 4<!--1--> Ultra<!--/1--><!--3--> Lite<!--/3--><!--/0--> to extend its capabilities and range of performance.  These accessories allow the <!--5-->MSS<!---/5--><!--0-->Pro 4<!--1--> Ultra<!--/1--><!--3--> Lite<!--/3--><!--0--> to support a wider variety of mission profiles.</p>
+<p>Numerous accessories can be used with the <!--5-->MSS<!---/5--><!--0-->Pro 4<!--1--> Ultra<!--/1--><!--3--> Lite<!--/3--><!--/0--> to extend its capabilities and range of performance.  These accessories allow the <!--5-->MSS<!--/5--><!--0-->Pro 4<!--1--> Ultra<!--/1--><!--3--> Lite<!--/3--><!--0--> to support a wider variety of mission profiles.</p>
 
 <p>This section provides an overview of what accessory equipment is available.  For up-to-date information, including new accessories and updates, visit <a href="http://www.videoray.com" target="_blank">http://www.videoray.com</a>.  For information about installing and using accessories, including operational recommendations, please see the guides provided with each accessory.</p>
 
