--- a/htm/panel_safety.htm
+++ b/htm/panel_safety.htm
@@ -1,30 +1,41 @@
 <h1>Safety Circuit<!--5-->s<!--/5--><!--4-->s<!--/4--></h1>
 
-<p>The Control Panel includes <!--5-->two<!--/5--><!--4-->two<!--/4--><!--1-->one<!--/1--> safety circuit component<!--4-->s<!--/4-->.</p>
+<p>The Control Panel includes <!--5-->two<!--/5--><!--4-->three<!--/4--><!--1-->one<!--/1--> safety circuit component<!--4-->s<!--/4-->.</p>
 
 <ul>
-  <li>GFCI (Ground Fault Circuit Interrupter) / Circuit Breaker<p></p></li>
+  <li>GFCI (Ground Fault Circuit Interrupter)<p></p></li>
 <!--5-->
   <li>LIM (Line Insulation Monitor)<p></p></li>
 <!--/5-->
-
 <!--4-->
   <li>LIM (Line Insulation Monitor)<p></p></li>
+  <li>Circuit Breaker<p></p></li>
 <!--/4-->
   </ul>
 
-<h2>GFCI (Ground Fault Circuit Interrupter) / Circuit Breaker</h2>
+<h2>GFCI (Ground Fault Circuit Interrupter)</h2>
+
+<p>The GFCI protects the operator from shock from the AC circuit of the power source<!--4-->, and protects the equipment from a current overload<!--/4-->.</p>
 
 <!--5-->
-<p>The GFCI is inline with the power cord.  When initially connected to a power source, it is in the off state.  You must press the Reset Button to enable it.  When enabled, the green LED will be illuminated.</p>
+<p>The GFCI is inline with the power cord.  When initially connected to a power source, it is in the Off state.  You must press the Reset Button to enable it.  When enabled, the green LED will be illuminated.</p>
+
+<p><img src="../../pro_4/images/gfci_ip65.jpg"></p>
 <!--/5-->
 
 <!--4-->
-<p>The GFCI / Circuit Breaker protects the operator from shock from the AC circuit of the power source, and protects the equipment from a current overload.  The GFCI has two operating switches and a test button.  To energize the control panel, both switches need to be turned on.  If the GFCI detects a differential current between the supply and ground poles of the power source, it will trip, or open the circuit.  If the circuit breaker detects a current greater than it's rating, it will trip.  The test button can be used to simulate these conditions and pressing and holding the test button should cause the switches to open, or turn off.  If the GFCI continues to trip, the system should be inspected for a fault before being used.</p>
+<p>For current and IP65 control panels, the switch GFCI is inline with the power cord.  When initially connected to a power source, it is in the Off state.  You must press the Reset Button to enable it.  When enabled, the green LED will be illuminated.</p>
+<p><img src="../../pro_4/images/gfci_ip65.jpg"></p>
+
+<p>For legacy panels, the GFCI switch is integrated with the Circuit Breaker and both switches must be turned on for the control panel to operate.  The GFCI / Circuit Breaker can be found in the right front of the control panel.</p>
+<p><img src="../../pro_4/images/gfci_standard.jpg"></p>
+
+<p>If the GFCI detects a differential current between the supply and ground poles of the power source, it will trip, or open the circuit.  If the circuit breaker detects a current greater than it's rating, it will trip.  The test button can be used to simulate these conditions and pressing and holding the test button should cause the switches to open, or turn off.  If the GFCI continues to trip, the system should be inspected for a fault before being used.</p>
 <!--/4-->
 
 <!--1-->
-<p>The GFCI is inline with the power cord.  When initially connected to a power source, it is in the off state.  You must press the Reset Button to enable it.  When enabled, the green LED will be illuminated.</p>
+<p>The GFCI is inline with the power cord.  When initially connected to a power source, it is in the Off state.  You must press the Reset Button to enable it.  When enabled, the green LED will be illuminated.</p>
+<p><img src="../../pro_4/images/gfci_ip65.jpg"></p>
 <!--/1-->
 
 <!--5-->
@@ -49,4 +60,16 @@
 <p><img src="../../required/images/icon_danger.png"> Determining if the system is safe to operate in the LIM Bypass mode requires a trained and qualified technician.  Do not operate the system in LIM Bypass mode unless you are trained and qualified and 100% certain that the situation is safe.</p>
 <!--/4-->
 
-<p><img src="../../required/images/icon_note.png"> See the Control Panel Switches and Connections section for more information about <!--1-->the GFCI's location<!--/1--><!--4-->these components and their locations<!--/4-->, and see the <a href="../../<!--i-->$$htmlDir<!--/i-->qs_predive.html">Pre-Dive Preparations</a> section of the <a href="../../<!---i-->$$htmlDir<!--/i-->qs_.html">Quick Start Instructions</a> for information about testing <!--5-->these<!--/5--><!--4-->these<!--/4--><!--1-->this<!--/1--> component<!--5-->s<!--/5--><!--4-->s<!--/4-->.</p>
+<!--4-->
+<h2>Circuit Breaker</h2>
+
+<p>The Circuit Breaker protects the equipment and source from a current overload.  On current panels, the circuit breaker can be found under the VideoRay logo plate on the right front of the control panel.  In order to access the circuit breaker, you need to remove the two screws that hold the plate.</p>
+
+<p><img src="../../pro_4/images/circuit_breaker_cover.jpg" width="200">
+<img src="../../pro_4/images/circuit_breaker.jpg" width="300"></p>
+
+<p>On legacy control panels, the circuit breaker is integrated with the GFCI switch.</p>
+<!--/4-->
+
+<p><img src="../../required/images/icon_note.png"> See the Control Panel Switches and Connections section for more information about <!--5-->these components and their locations<!--/5--><!--4-->these components and their locations<!--/4--><!--1-->the GFCI's location<!--/1-->, and see the <a href="../../<!--i-->$$htmlDir<!--/i-->qs_predive.html">Pre-Dive Preparations</a> section of the <a href="../../<!---i-->$$htmlDir<!--/i-->qs_.html">Quick Start Instructions</a> for information about testing <!--5-->these<!--/5--><!--4-->these<!--/4--><!--1-->this<!--/1--> component<!--5-->s<!--/5--><!--4-->s<!--/4-->.</p>
+
