--- a/htm/qs_predive.htm
+++ b/htm/qs_predive.htm
@@ -55,27 +55,26 @@
 
 <p><img src="../../required/images/icon_danger.png"> <img src="../../required/images/icon_caution.png"> If the system does not pass any of the following tests, it should not be used until the problem is identified and corrected.<!--0--> See the <a href="../../pro_4/html<!--1-->_ultra<!--/1--><!--3-->_lite<!--/3-->/mnt_diagnostics.html">Diagnostics and Repair</a> section of the <a href="../../pro_4_mnt_n/html/index.html">Maintenance Guide</a> for more information.<!--/0--></p>
 
-<p>The VideoRay <!--5-->MSS<!--/5--><!--0-->Pro 4<!--/0--><!--1--> Ultra<!--/1--><!--3--> Lite<!--/3--> includes <!--5-->two<!--/5--><!--4-->two<!--/4--><!--1-->one<!--/1--> circuit safety component<!--5-->s<!--/5--><!--4-->s<!--/4-->.<p>
+<p>The VideoRay <!--5-->MSS<!--/5--><!--0-->Pro 4<!--/0--><!--1--> Ultra<!--/1--><!--3--> Lite<!--/3--> includes <!--5-->two<!--/5--><!--4-->three<!--/4--><!--1-->one<!--/1--> circuit safety component<!--5-->s<!--/5--><!--4-->s<!--/4-->.<p>
 
 <ul>
-  <li>The GFCI (Ground Fault Circuit Interrupter)<!--4--> / Circuit Breaker<!--/4--> <!--5--> found inline in the power cord.<p></p></li>
+  <li>GFCI (Ground Fault Circuit Interrupter)<p></p></li>
 <!--5-->
-  <li> LIM (Line Insulation Monitor) found on the front right side of the control panel.<p></p></li>
+  <li>LIM (Line Insulation Monitor)<p></p></li>
 <!--/5-->
 <!--4-->
-  <li> LIM (Line Insulation Monitor) Test and Reset buttons can be found on the front right side of the control panel.<p></p></li>
+  <li>LIM (Line Insulation Monitor)<p></p></li>
+  <li>Circuit Breaker.<p></p></li>
 <!--/4-->
   </ul>
 
-<h3>Testing the Circuit Safety Components</h3>
+<h3>Testing the Circuit Safety Component<!--5-->s<!--/5--><!--4-->s<!--/4--></h3>
 
-<p>Test the GFCI<!--4--> / Circuit Breaker<!--/4--> switch (The system must be connected to a working power source to perform this test.)</p>
-
-<!--4-->
-<h3>IP65 Control Panel</h3>
-<!--/4-->
+<p>Connect the power cord to a suitable power source.</p>
 
 <!--5-->
+<p>The GFCI can be found inline in the power cord.</p>
+
 <ol>
   <li>Press the GFCI Reset button to turn on the GFCI.  The green LED should illuminate.<p></p></li>
 
@@ -85,7 +84,13 @@
 </ol>
 <!--/5-->
 
+<!--4-->
+<h3>Current Control Panels, including IP65 and Standard</h3>
+<!--/4-->
+
 <!--0-->
+<p>The GFCI can be found inline in the power cord.</p>
+
 <ol>
   <li>Press the GFCI Reset button to turn on the GFCI.  The green LED should illuminate.<p></p></li>
 
@@ -96,7 +101,11 @@
 <!--/0-->
 
 <!--4-->
-<h3>Standard Control Panel</h3>
+<p>The Circuit Breaker can be found under the circular VideoRay logo plate on the right side of the control panel.  The circuit breaker is set to On and should not need to be reset unless it has tripped.  To access the circuit breaker, remove the plate.</p>
+
+<h3>Legacy Control Panel</h3>
+
+<p>The GFCI / Circuit Breaker are integrated in a combined switch can be found on the right side of the control panel.</p>
 
 <ol>
   <li>Set the GFCI / Circuit Breaker switch to the On position.<p></p></li>
@@ -107,12 +116,14 @@
 </ol>
 <!--/4-->
 
-<p>Set the Power switch to the On position. The green Power On indicator light should turn on.  If the green Power On indicator light is not on, make sure the system is connected to a working power source and the GFCI<!--4--> / Circuit Breaker<!--/4--> switch is turned on.</p>
+<h3>Power On<!--5--> and LIM<!--/5--><!--4--> and LIM<!--/4--> Tests</h3>
+
+<p>Set the Power switch to the On position. The green Power On indicator light should turn on.  If the green Power On indicator light is not on, make sure the system is connected to a working power source and the GFCI switch is turned on.</p>
 
 <!--5-->
-<p>Twist the ROV Power switch to the On position. The green Power On indicator light should turn on.  If the green Power On indicator light is not on, make sure the system is connected to a working power source and the GFCI / Circuit Breaker switch is turned on.</p>
+<p>Twist the ROV Power switch to the On position. The green 400 V Power On indicator light should turn on.  If the green 400 V Power On indicator light is not on, make sure the system is connected to a working power source and the GFCI and main power switches are turned on.</p>
 
-<p>Test the Line Insulation Monitor (GFCI switch and Power switch must both be set to On in order to perform this test.)</p>
+<p>Test the LIM.  The LIM can be found on the right side of the control panel.  The GFCI switch and the main and 400 V Power switches must both be set to On in order to perform this test.</p>
 
 <ol>
 <li>The yellow Alarm light should be off.  If the yellow light is on, press and hold the Reset button until the yellow Alarm light turns off.<p></p></li>
@@ -124,7 +135,7 @@
 <!--/5-->
 
 <!--4-->
-<p>Test the Line Insulation Monitor (GFCI / Circuit Breaker switch and Power switch must both be set to On in order to perform this test.)</p>
+<p>Test the LIM.  The LIM Test and Reset switches can be found on the right side of the control panel.  The GFCI and Power switches must both be set to On in order to perform this test.)</p>
 
 <ol>
 <li>The yellow Alarm light should be off.  If the yellow light is on, press and hold the black Reset button until the yellow Alarm light turns off.<p></p></li>
